# olog.c

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/: olog.h
src/: olog.c
